--- a/docker-compose-deploy-backend.yml
+++ b/docker-compose-deploy-backend.yml
@@ -2,6 +2,6 @@ version: "3.7"
 
 services:
   backend:
-    image: non/backend:1.1.3
+    image: non/backend
     ports:
-      - "1111:1111"
+      - "3000:3000"
