--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,37 +3,14 @@ version: '3.7'
 services:
   app:
     container_name: frontend
-    image: non/frontend:1.2.0
+    image: non/frontend
     restart: always
     build: ./frontend
-    ports: ['8660:8660']
+    ports: ['8080:8080']
   back:
-    # depends_on:
-    #   - mongodb
     container_name: backend
-    image: non/backend:1.1.3
+    image: non/backend
     restart: always
-    build: ./server
-    ports: ['1111:1111']
+    build: ./backend
+    ports: ['3000:3000']
   
-    # environment:
-    #   - DB_HOST=mongodb
-    #   - DB_USER=admin
-    #   - DB_PASSWORD=admin
-    #   - DB_NAME=traderrecord
-    #   - DB_PORT=27017
-    # stdin_open: true
-    # tty: true
-#   mongodb:
-#     image: mongo:5.0.2
-#     restart: unless-stopped
-    
-#     environment:
-#       - MONGO_INITDB_ROOT_USERNAME=admin
-#       - MONGO_INITDB_ROOT_PASSWORD=admin
-#     ports:
-#       - 27017:27017
-#     volumes:
-#       - db:/data/db
-# volumes:
-#   db:
